[project]
name = "scikit"
version = "0.1.0"
description = ""
authors = [
    {name = "DavidHODs",email = "davidoluwatobi41@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "scikit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
